# Forge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TECH_STACK.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/langchain-langgraph-deepagents/: SKILL.md
.agents/skills/langchain-langgraph-deepagents/references/: deepagents-core.md  langchain-advanced-ui.md  langchain-agents.md  langgraph-app-ops.md  langgraph-design-patterns.md  langgraph-runtime.md  observability-testing-recommendations.md
.claude/: launch.json
.claude/skills/langchain-langgraph-deepagents/references/: deepagents-capabilities.md  deepagents-recipes-protocols.md  overview-versioning.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
_design_reference/1-for-every-1/: README.md
_design_reference/1-for-every-1/chats/: chat1.md
_design_reference/1-for-every-1/project/: .thumbnail  Forge - Agent Platform.html
_design_reference/1-for-every-1/project/app/: app.jsx  canvas.jsx  data.js  icons.jsx  inspector.jsx  nodes.jsx  primitives.jsx  screens_config.jsx  screens_config2.jsx  screens_deploy.jsx  screens_home.jsx  screens_knowledge.jsx  screens_run.jsx  screens_traces.jsx  shell.jsx
_design_reference/1-for-every-1/project/assets/: tokens.css
_design_reference/1-for-every-1/project/uploads/: 1-research-and-technology-decisions.md  2-technical-design-and-implementation.md  3-ui-design-specification.md  4-schema-contracts.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/forge/: __init__.py  audit_middleware.py  config.py  deps.py  main.py  model_catalog.py  queue.py  security.py  worker.py
apps/api/forge/assistant_skills/forge-platform/: SKILL.md
apps/api/forge/auth_providers/: __init__.py  extract.py  resolver.py  templates.py
apps/api/forge/channels/: __init__.py  email.py  retry.py  teams.py
apps/api/forge/db/: __init__.py  base.py  scoping.py  seed.py
apps/api/forge/engine/: __init__.py  compiler.py  context.py  expressions.py  middleware_compiler.py  models.py  registry.py  state.py
apps/api/forge/knowledge/: __init__.py  crawl.py  embeddings.py  hybrid.py  pgvector_store.py  rerank.py  splitter.py  store.py
apps/api/forge/models/: __init__.py  entities.py  evals.py
apps/api/forge/nodes/: __init__.py  agent_node.py  data.py  flow.py  llm_node.py  rag.py  triggers.py
apps/api/forge/routers/: __init__.py  agents.py  assistant.py  audit.py  auth.py  auth_providers.py  channels.py  components.py  connections.py  conversations.py  embed.py  embed_public.py  evals.py  handoff.py  health.py  hooks.py  knowledge.py  mcp_clients.py  mcp_oauth.py  mcp_server.py  mcp_tokens.py  models.py  nodes.py  oauth.py  pricing.py  project_run.py  projects.py  runs.py  secrets.py  stats.py  tool_sets.py  tools.py  traces.py  triggers.py  versions.py  workflows.py
apps/api/forge/schemas/: __init__.py  contracts.py  dto.py
apps/api/forge/secrets/: __init__.py  fernet.py  store.py
apps/api/forge/services/: __init__.py  agents.py  apikeys.py  assistant.py  audit.py  auth.py  auth_providers.py  budget.py  channels.py  components.py  conversations.py  dispatch.py  evals.py  handoff.py  knowledge.py  memory.py  portability.py  projects.py  quota.py  retention.py  runs.py  runtime.py  secrets.py  semantic_cache.py  tool_sets.py  tools.py  traces.py  triggers.py  validation.py  versions.py  workflows.py
apps/api/forge/tools/: __init__.py  builtin.py  code.py  components.py  graphql.py  materialize.py  mcp.py  projection.py  rest.py  sql.py
apps/api/forge/tracing/: __init__.py  otel.py  pricing.py  tool_io.py  tracer.py
apps/api/forge/util/: __init__.py  clientip.py  http.py  locks.py  mailer.py  metrics.py  netfix.py  ratelimit.py  serialize.py  ssrf.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_baseline.py  0002_embed_and_components.py  0003_conversation_traces.py  0004_versions_evals_platform.py  0005_tenant_scoped_user_email.py  0006_drop_tool_agent_version.py  0007_tool_sets.py  0008_apikey_user_scope.py  0009_oauth_clients.py  0010_toolset_exposed.py
apps/api/tests/: conftest.py  test_advanced_nodes.py  test_agent_tool_dedup.py  test_app_event.py  test_auth.py  test_body_template_loop.py  test_channels.py  test_channels_hitl.py  test_chunking_strategies.py  test_clientip.py  test_config_env_lists.py  test_connected_credentials.py  test_conversations.py  test_cost.py  test_crawl.py  test_default_middleware.py  test_e2e_regressions.py  test_embedding_spans.py  test_engine.py  test_engine_knowledge_regressions.py  test_error_workflow.py  test_evals_and_retrieval.py  test_evals_hardening.py  test_fixes_2026_06_11.py  test_form_encoding.py  test_ghost_config_fixes.py  test_handoff.py  test_hardening_2026_06_18.py  test_hybrid_search.py  test_knowledge.py  test_mcp.py  test_mcp_oauth.py  test_mcp_server.py  test_mcp_streamable.py  test_memory.py  test_model_catalog.py  test_oauth.py  test_otel.py  test_per_user_token_auth.py  test_pgvector_store.py  (+37 more)
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.mjs  package.json  vitest.config.mts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/embed/: page.tsx
apps/web/components/: component-renderer.tsx  icons.tsx  import-export.tsx  login.tsx  markdown.tsx  primitives.tsx  shell.tsx  version-history.tsx
apps/web/components/canvas/: AgentConfig.tsx  ConfigForm.tsx  EdgeOverlay.tsx  (+2 more)
apps/web/lib/: api.ts  chat-parts.ts  data.ts  graph.ts  models.ts
apps/web/public/: launcher.js
apps/web/test/: console-smoke.test.tsx  setup.ts
docs/: AUDIT-2026-06-18.md  FIXES-2026-06-11.md  HARDENING-2026-06-18.md  MANUAL.md  PERFECT-PRODUCT-2026-06-14.md  PLAN-STRUCTURED-RESPONSES-AND-COMPONENTS-2026-06-18.md  ROADMAP.md
docs/reports/: mcp-and-service-token.md  tool-sets-and-mcp-toolsets.md
infra/: postgres_rls.sql
(+17 files in other folders)
